refactor: simplify button text to only show arrow icon in catalog views

--- a/templates/catalog/catalog.html
+++ b/templates/catalog/catalog.html
@@ -45,7 +45,7 @@
                                 <span class="price-request">Цена по запросу</span>
                                 {% endif %}
                             </div>
-                            <span class="btn btn-text">Подробнее <i class="fas fa-arrow-right"></i></span>
+                            <span class="btn btn-text"><i class="fas fa-arrow-right"></i></span>
                         </div>
                     </div>
                 </a>
@@ -85,7 +85,7 @@
                         <p>{{ category.description|truncatechars:60 }}</p>
                         {% endif %}
                         <span class="btn btn-text">
-                            Посмотреть <i class="fas fa-arrow-right" aria-hidden="true"></i>
+                            <i class="fas fa-arrow-right" aria-hidden="true"></i>
                         </span>
                     </div>
                 </a>
