--- a/templates/catalog/category_detail.html
+++ b/templates/catalog/category_detail.html
@@ -56,7 +56,7 @@
                             {% endif %}
                         </div>
                         <div class="item-action">
-                            <span class="btn btn-text">Подробнее <i class="fas fa-arrow-right"></i></span>
+                            <span class="btn btn-text"><i class="fas fa-arrow-right"></i></span>
                         </div>
                     </div>
                 </div>
