--- a/templates/main.html
+++ b/templates/main.html
@@ -37,7 +37,7 @@
                         <div class="category-overlay">
                             <h3>{{ category.name }}</h3>
                             <span class="btn btn-text">
-                                Просмотреть <i class="fas fa-arrow-right" aria-hidden="true"></i>
+                                <i class="fas fa-arrow-right" aria-hidden="true"></i>
                             </span>
                         </div>
                     </a>
