--- a/templates/main.html
+++ b/templates/main.html
@@ -108,8 +108,7 @@
                     </div>
                     <h3>Наш адрес</h3>
                     <address>
-                        Ташкент, Узбекистан<br>
-                        ул. Примерная, 123
+                      Узбекистан,  Ташкент, Буюк Ипак йули 233 <br>
                     </address>
                 </article>
                 <article class="contact-card">
